feat(localnet): add snapshots commands
